# SpokenLanguageIdentification

./: .gitignore  main.py  pyproject.toml
config/: lid_config.py
models/: lid_model.py
settings/language_identification/: config.yml
utils/: data_loader.py
