[tool.poetry]
name = "spoken-language-identification"
version = "1.0.0"
description = "spoken-language-identification"
authors = [
    "Oleksandr Zahorenko <oleksandr.zahorenko@viti.edu.ua>",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
loguru = "0.7.2"
librosa = "0.10.1"
numpy = "1.26.3"
torch = "^2.2.0"
torchvision = "0.17.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"
